# vol-surface-vae-pub

./: .gitignore  1D_VAE_ARCHITECTURE_EQUIVALENCE.md  BACKFILLING_PROPOSAL.md  BACKFILL_MVP_PLAN.md  CI_CALIBRATION_OBSERVATIONS.md  CLAUDE.md  CONDITIONAL_DISTRIBUTION_FRAMEWORK.md  CONDITIONAL_VARIANCE_SOLUTIONS.md  DEVELOPMENT.md  EXPERIMENT_INVENTORY.md  LATENT_SAMPLING_STRATEGIES.md  ONE_YEAR_BACKFILL_PLAN.md  ONE_YEAR_BACKFILL_REVISED_ASSESSMENT.md  PHASE4_FINDINGS.md  PRODUCT_SPEC.md  QUANTILE_DIAGNOSIS_GENERATION_BUG.md  QUANTILE_REGRESSION_PLAN.md  QUANTILE_REGRESSION_RESULTS.md  README.md  WHY_ENCODER_IGNORES_CROSS_STOCK_INFO.md  analyze_distribution_shift.py  analyze_latent_contribution_16yr.py  analyze_latent_distribution.py  analyze_latent_distributions_16yr.py  analyze_noise_sweep.py  analyze_residuals_exact_latents.py  analyze_vae_health_16yr.py  analyze_vae_health_oos_16yr.py  batch_test_noise_scales.py  compare_oracle_vs_vae_prior_16yr.py  compare_reconstruction_losses.py  compare_sampling_methods.py  compile_cointegration_tables.py  compute_grid_ci_stats.py  diagnose_generation_pinball_loss.py  evaluate_1d_backfilling_model.py  evaluate_1d_models.py  evaluate_empirical_ci.py  evaluate_insample_ci_16yr.py  evaluate_oracle_oos_rmse_grid.py  (+66 more)
analysis_code/: analyze_shape_vs_horizon.py  create_shape_diagnostic_heatmaps.py  debug_histogram_mismatch.py  diagnose_distribution_shape.py  diagnose_marginal_variance.py  evaluate_1d_quantile_models.py  fit_aggregated_posterior.py  latent_pca.py  regression.py  verify_mean_tracking_vs_ci.py  visualize_1d_predictions.py  (+18 more)
(+176 files in other folders)
